welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:3: error: type mismatch;
 found   : Boolean(true)
 required: Int
    return true;Int=Int+1
           ^countTeen:3: error: reassignment to val
    return true;Int=Int+1
                   ^countTeen:6: error: type mismatch;
 found   : Boolean(true)
 required: Int
    return true;Int=Int+1
           ^countTeen:6: error: reassignment to val
    return true;Int=Int+1
                   ^countTeen:9: error: type mismatch;
 found   : Boolean(true)
 required: Int
    return true;Int=Int+1
           ^countTeen:9: error: reassignment to val
    return true;Int=Int+1
                   ^countTeen:12: error: type mismatch;
 found   : Boolean(true)
 required: Int
    return true;Int=Int+1
           ^countTeen:12: error: reassignment to val
    return true;Int=Int+1
                   ^countTeen:13: error: type mismatch;
 found   : Boolean(false)
 required: Int
  }else{return false}
               ^